syntax = "proto3";
import "common.proto";
import "transaction.proto";

// Contains all variants of mempool and an L1Handler variant to cover all transactions that can be
// in a new block.
message ConsensusTransaction {
    oneof txn {
        starknet.transaction.DeclareV3WithClass declare_v3 = 1;
        starknet.transaction.Transaction.DeployAccountV3    deploy_account_v3 = 2;
        starknet.transaction.Transaction.InvokeV3           invoke_v3 = 3;
        starknet.transaction.Transaction.L1HandlerV0        l1_handler = 4;
    }
    starknet.common.Hash transaction_hash = 5;
}

message Vote {
    enum  VoteType {
        Prevote   = 0;
        Precommit = 1;
    };

    // We use a type field to distinguish between prevotes and precommits instead of different
    // messages, to make sure the data, and therefore the signatures, are unambiguous between
    // Prevote and Precommit.
    VoteType      vote_type  = 2;
    uint64        height     = 3;
    uint32        round      = 4;
    // This is optional since a vote can be NIL.
    optional starknet.common.Hash block_hash = 5;
    starknet.common.Address       voter      = 6;
}

message StreamMessage {
    oneof message {
        bytes content = 1;
        starknet.common.Fin fin = 2;
    }
    bytes stream_id = 3;
    uint64 message_id = 4;
}

message ProposalInit {
    uint64 height = 1;
    uint32 round = 2;
    optional uint32 valid_round = 3;
    starknet.common.Address proposer = 4;
}

message BlockInfo {
    uint64 height = 1;
    uint64 timestamp = 2;
    starknet.common.Address                 builder = 3;
    starknet.common.L1DataAvailabilityMode  l1_da_mode = 4;
    starknet.common.Uint128                 l2_gas_price_fri = 5;
    starknet.common.Uint128                 l1_gas_price_wei = 6;
    starknet.common.Uint128                 l1_data_gas_price_wei = 7;
    starknet.common.Uint128                 eth_to_fri_rate = 8;
}

message TransactionBatch {
    repeated ConsensusTransaction transactions = 1;
}

message ProposalFin {
    // Identifies a Starknet block based on the content streamed in the proposal.
    starknet.common.Hash proposal_commitment = 1;
}

// Network format:
// 1. First message is ProposalInit
// 2. Last message is ProposalFin
// 3. In between can be any number of other messages.
message ProposalPart {
    oneof message {
        ProposalInit init = 1;
        ProposalFin fin = 2;
        BlockInfo block_info = 3;
        TransactionBatch transactions = 4;
    }
}
